# silence

./: .gitignore  CMakeLists.txt  LICENCE  README.md  build_client.sh  file_server.cpp  file_server.hpp  file_server_main.cpp  future_docs.md  help.md  run_client.sh  run_server.sh  test_file_server.cpp  to_do.md
.github/workflows/: build.yml  build_and_test.yml  run_tests.yml  test.yml
client/: CMakeLists.txt  aes.md  main.cpp
client/include/: aes.hpp  client.hpp  user.hpp
client/src/: CMakeLists.txt  aes.cpp  client.cpp  user.cpp
common/: CMakeLists.txt
common/crypto/: CMakeLists.txt
common/crypto/include/: aes256.hpp  crypto_utils.hpp  dsa.hpp  el_gamal.hpp  el_gamal_digital_signature.hpp  el_gamal_encryption.hpp  hybrid_crypto_system.hpp  sha256.hpp  user_crypto_keys.hpp  utils.hpp
common/crypto/src/: CMakeLists.txt  aes256.cpp  crypto_utils.cpp  dsa.cpp  el_gamal.cpp  el_gamal_encryption.cpp  hybrid_crypto_system.cpp  main.cpp  sha256.cpp  user_crypto_keys.cpp  utils.cpp
common/include/: chat.hpp  common.hpp  debug.hpp  message.hpp  message_metadata.hpp  message_text.hpp  request.hpp  user.hpp
common/src/: CMakeLists.txt  chat.cpp  debug.cpp  message.cpp  message_metadata.cpp  message_text.cpp  user.cpp
crypto/include/: aes256.hpp  crypto_utils.hpp  dsa.hpp  el_gamal_encryption.hpp  hybrid_crypto_system.hpp  sha256.hpp  user_crypto_keys.hpp
crypto/src/: aes256.cpp  crypto_utils.cpp  dsa.cpp  el_gamal_encryption.cpp  hybrid_crypto_system.cpp  sha256.cpp  user_crypto_keys.cpp
database/: message_metadata.sql  user_metadata.sql
file_server/: CMakeLists.txt  README.md  file_server_client_main.cpp  file_server_main.cpp  main.cpp
file_server/include/: file_server.hpp  file_server_client.hpp
file_server/src/: CMakeLists.txt  file_server.cpp  file_server_client.cpp
media_file_system/: process.cpp
params/: server_params.json
scripts/: build.sh  build_and_run_client.sh  build_and_run_server.sh  build_and_run_tests.sh  build_both.sh  build_client.sh  build_release.sh  build_server.sh  drop_message_text_db.sh  install_dep.sh  prettier.sh  run_client.sh  run_file_server.sh  run_server.sh  run_tests.py  run_tests.sh  run_uncrustify.sh  set_env_variables.sh  setup_message_metadata.sh  setup_message_text_db.sh  setup_user_metadata.sh  teardown_message_text_db.sh
server/: CMakeLists.txt  README.md  main.cpp
server/include/: base_metadata_repository.hpp  base_repository.hpp  connected_clients_manager.hpp  db_manager.hpp  file_server_client.hpp  message_metadata_repository.hpp  message_repository.hpp  message_text_repository.hpp  postgres_db_manager.hpp  repository_manager.hpp  request_handler.hpp  server.hpp  server_config.hpp  user_metadata_repository.hpp  user_repository.hpp
server/src/: CMakeLists.txt  connected_clients_manager.cpp  db_manager.cpp  file_server_client.cpp  message_metadata_repository.cpp  message_repository.cpp  message_text_repository.cpp  postgres_db_manager.cpp  repository_manager.cpp  request_handler.cpp  server.cpp  user_metadata_repository.cpp  user_repository.cpp
tests/: CMakeLists.txt
tests/test_common/: CMakeLists.txt  main.cpp
tests/test_common/crypto/: CMakeLists.txt  main.cpp
tests/test_common/crypto/src/: test_aes256.cpp  test_crypto_utils.cpp  test_dsa.cpp  test_el_gamal.cpp  test_el_gamal_encryption.cpp
tests/test_common/src/: test_message.cpp  test_user.cpp
tests/test_crypto/: CMakeLists.txt
tests/test_crypto/src/: test_aes256.cpp  test_crypto_utils.cpp  test_dsa.cpp  test_el_gamal_encryption.cpp
tests/test_file_server/: CMakeLists.txt  main.cpp
tests/test_file_server/src/: test_file_server.cpp
tests/test_server/: CMakeLists.txt  main.cpp
tests/test_server/database/: drop_test_message_metadata.sql  drop_test_user_metadata.sql  test_message_metadata.sql  test_user_metadata.sql
tests/test_server/include/: message_metadata_repository_test_environment.hpp  message_text_repository_test_environment.hpp  user_metadata_repository_test_environment.hpp
tests/test_server/scripts/: drop_test_message_metadata.sh  drop_test_message_text.sh  drop_test_user_metadata.sh  setup_test_message_text.sh  setup_test_user_metadata.sh
tests/test_server/src/: test_message_metadata_repository.cpp  test_message_text_repository.cpp  test_user_metadata_repository.cpp
